# hybrid-graph-rag

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  WRITEUP.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: corpus.jsonl  qrels.jsonl  triples.jsonl
data/scifact/: qrels.jsonl  triples.jsonl
docs/: architecture.md
reports/: benchmark_report_example.md
src/hybrid_rag/: __init__.py  cli.py  text.py
src/hybrid_rag/benchmark/: __init__.py  metrics.py  report.py  runner.py
src/hybrid_rag/graph/: __init__.py  property_graph.py
src/hybrid_rag/ingest/: __init__.py  scifact.py
src/hybrid_rag/mcp/: __init__.py  connector.py
src/hybrid_rag/retrieval/: __init__.py  base.py  bm25.py  dense.py  embeddings.py  fusion.py  graph_augmented.py  hybrid.py
tests/: test_benchmark.py  test_embeddings.py  test_fusion.py  test_graph.py  test_mcp.py  test_metrics.py  test_retrieval.py  test_scifact.py
